--- a/src/components/navigation/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar.astro
@@ -59,7 +59,7 @@ import { HiBars3BottomLeft } from "react-icons/hi2";
       <ul class="gap-2 px-1 menu menu-horizontal">
         <li><a href="/">Inicio</a></li>
         <li>
-          <details>
+          <!-- <details>
             <summary>
               <a href="/servicios">Servicios</a>
             </summary>
@@ -68,7 +68,8 @@ import { HiBars3BottomLeft } from "react-icons/hi2";
               <li><a href="/">Tienda en Línea</a></li>
               <li><a href="/">Aplicaciones Web</a></li>
             </ul>
-          </details>
+          </details> -->
+          <a href="/servicios">Servicios</a>
         </li>
         <li><a href="/contactos">Contactos</a></li>
       </ul>
