--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import AboutSection from "../pages/sections/index/AboutSection.astro";
 import FeatureSection from "../pages/sections/index/FeatureSection.astro";
 import HeroSection from "../pages/sections/index/HeroSection.astro";
 import ProjectSection from "../pages/sections/index/ProjectSection.astro";
-import ServiceSection from "../pages/sections/index/ServiceSection.astro";
+import ServiceSection from "./sections/general/ServiceSection.astro";
 import TechnologySection from "../pages/sections/index/TechnologySection.astro";
 import StatSection from "./sections/general/StatSection.astro";
 ---
@@ -13,9 +13,9 @@ import StatSection from "./sections/general/StatSection.astro";
   title="RysthDesign | Diseño y Desarrollo de Sitios Web Profesionales | Aplicaciones Web | Tíendas en Línea | Páginas Web Guayaquil"
 >
   <HeroSection />
-  <ServiceSection />
-  <AboutSection />
   <FeatureSection />
+  <AboutSection />
+  <ServiceSection />
   <ProjectSection />
   <hr class="hidden border-none md:block md:mt-56 bg-none" />
   <TechnologySection />
