--- a/src/pages/sections/index/FeatureSection.astro
+++ b/src/pages/sections/index/FeatureSection.astro
@@ -16,7 +16,7 @@ const {
       title="Nuestras Características"
       description="Explora nuestras competencias clave en diseño y desarrollo web."
     />
-    <section class="grid grid-cols-1 gap-4 mt-12 md:my -20 md:grid-cols-4">
+    <section class="grid gap-4 mt-12 sm:grid-cols-2 md:gap-8 md:grid-cols-4">
       <FeatureCard
         title="Diseño Responsivo"
         description="Adaptabilidad y eficiencia en diferentes dispositivos."
