Add basic animations.

--- a/src/components/navigation/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar.astro
@@ -12,7 +12,7 @@ import { HiBars3BottomLeft } from "react-icons/hi2";
 ---
 
 <nav
-  class="fixed top-0 z-50 w-full px-4 transition duration-300 md:py-3 bg-brand-blue"
+  class="fixed top-0 z-50 w-full px-4 transition duration-300 md:py-3 bg-brand-blue animate__animated animate__bounceInDown"
   id="navbar"
 >
   <div class="relative max-w-screen-xl p-0 mx-auto navbar">
