--- a/src/pages/sections/general/StatSection.astro
+++ b/src/pages/sections/general/StatSection.astro
@@ -5,7 +5,9 @@ const { IoBriefcase, IoDesktop, IoSchool } = IoIcons;
 const { FaStar } = FaIcons;
 ---
 
-<section class="p-4 bg-gradient-to-br bg-brand-gradient">
+<section
+  class="p-4 bg-gradient-to-br bg-brand-gradient animate__animated animate__fadeIn"
+>
   <article class="relative z-20 max-w-screen-xl py-12 mx-auto md:py-24">
     <main class="grid grid-cols-2 gap-y-8 md:gap-8 md:grid-cols-4">
       <!-- Proyectos Realizados -->
