--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "animate.css";
 import NavigationBar from "@/components/navigation/NavigationBar.astro";
 import FooterBar from "@/components/navigation/FooterBar.astro";
 interface Props {
