--- a/src/pages/sections/index/HeroSection.astro
+++ b/src/pages/sections/index/HeroSection.astro
@@ -10,14 +10,18 @@ const { FaArrowRight } = FaIcons;
   <Image
     src={WaveSVG}
     alt="Wave Background"
-    class="absolute top-0 left-0 w-full md:w-4/5"
+    class="absolute top-0 left-0 w-full md:w-4/5 animate__animated animate__fadeInLeft"
   />
   <article
     class="relative z-20 max-w-screen-xl gap-20 py-12 mx-auto space-y-10 pt-28 h-max lg:py-32 md:pt-48 lg:pt-56 md:py-24 lg:grid lg:grid-cols-2"
   >
-    <Image src={ResponsiveIllustration} alt="" class="w-full lg:h-full" />
+    <Image
+      src={ResponsiveIllustration}
+      alt=""
+      class="w-full lg:h-full animate__animated animate__zoomIn animate__delay-1s"
+    />
     <main
-      class="justify-center space-y-4 text-center lg:text-left lg:flex lg:flex-col"
+      class="justify-center space-y-4 text-center lg:text-left lg:flex lg:flex-col animate__animated animate__delay-1s animate__fadeIn"
     >
       <h2
         class="text-2xl font-bold md:text-3xl lg:text-5xl lg:max-w-2xl lg:!leading-[3.5rem]"
