--- a/src/pages/servicios/index.astro
+++ b/src/pages/servicios/index.astro
@@ -136,27 +136,27 @@ import StatSection from "../sections/general/StatSection.astro";
     <div class="max-w-screen-xl py-12 mx-auto space-y-12 md:py-14">
       <Subtitle
         title="Consulta Nuestros Planes"
-        description="Ofrecemos soluciones a medida para tu presencia digital, con opciones desde sitios informativos hasta aplicaciones web avanzadas."
+        description="Ofrecemos soluciones a medida para tu presencia digital, con opciones desde tiendas en línea hasta aplicaciones web avanzadas."
       />
       <div
         class="relative flex flex-col items-center justify-center space-x-4 space-y-12 md:flex-row lg:space-y-0"
       >
         {/* Plan Informativo */}
         <PricingCard
-          title="Plan Informativo"
+          title="Plan Inicial"
           price="$250"
           features={[
-            "Sitio Web Informativo",
-            "Formulario de Contacto",
-            "Botón de WhatsApp",
-            "4 Secciones",
+            "Gestor de Contenido",
+            "Mini Tienda en Línea",
+            "Pedidos por WhatsApp",
+            "Hasta 25 Productos",
             "Diseño Web Profesional",
             "Certificación SSL",
             "Dominio Gratuito",
             "Hosting Gratuito",
             "Optimizado para Móviles",
           ]}
-          maintanceText="Mantenimiento y Optimización $15/mes"
+          maintanceText="Mantenimiento y Optimización $25/mes"
           buttonText="Comenzar Ahora"
           highlight={false}
         />
@@ -195,7 +195,7 @@ import StatSection from "../sections/general/StatSection.astro";
             "Optimizado para Móviles",
           ]}
           buttonText="Comenzar Ahora"
-          maintanceText="Mantenimiento y Optimización $125/mes"
+          maintanceText="Mantenimiento y Optimización $75/mes"
           highlight={false}
         />
       </div>
