--- a/src/pages/sections/index/HeroSection.astro
+++ b/src/pages/sections/index/HeroSection.astro
@@ -17,7 +17,7 @@ const { FaArrowRight } = FaIcons;
   >
     <Image
       src={ResponsiveIllustration}
-      alt=""
+      alt="Responsive web application"
       class="w-full lg:h-full animate__animated animate__zoomIn animate__delay-1s"
     />
     <main
@@ -26,13 +26,13 @@ const { FaArrowRight } = FaIcons;
       <h2
         class="text-2xl font-bold md:text-3xl lg:text-5xl lg:max-w-2xl lg:!leading-[3.5rem]"
       >
-        Desarrollo de Aplicaciones y Sitios Web Profesionales
+        Desarrollo de Aplicaciones Web y Tiendas en Línea Profesionales
       </h2>
       <p
         class="max-w-lg mx-auto text-sm leading-6 text-gray-500 md:text-base lg:ml-0"
       >
-        Servicios de desarrollo web para negocios con soluciones tecnológicas
-        modernas, escalables y seguras.
+        Servicios de diseño y desarrollo web para negocios con soluciones
+        tecnológicas modernas, escalables y seguras.
       </p>
       <div class="mt-10">
         <a
