--- a/src/pages/servicios/index.astro
+++ b/src/pages/servicios/index.astro
@@ -143,8 +143,8 @@ import StatSection from "../sections/general/StatSection.astro";
       >
         {/* Plan Informativo */}
         <PricingCard
-          title="Plan Inicial"
-          price="$250"
+          title="Plan MiniStore"
+          price="$300"
           features={[
             "Gestor de Contenido",
             "Mini Tienda en Línea",
@@ -163,7 +163,7 @@ import StatSection from "../sections/general/StatSection.astro";
         {/* Plan E-Commerce */}
         <PricingCard
           title="Plan E-Commerce"
-          price="$500"
+          price="$600"
           features={[
             "Gestor de Contenido",
             "Tienda en Línea",
@@ -182,7 +182,7 @@ import StatSection from "../sections/general/StatSection.astro";
         {/* Plan Aplicación Web */}
         <PricingCard
           title="Plan Aplicación Web"
-          price="$800"
+          price="$900"
           features={[
             "Aplicación Web Moderna",
             "Base de Datos Segura",
