Update pages and sections.

--- a/src/pages/servicios/index.astro
+++ b/src/pages/servicios/index.astro
@@ -4,6 +4,8 @@ import WebsiteIllustration from "@/assets/images/illustrations/website.svg";
 import Subtitle from "@/components/heading/Subtitle.astro";
 import PricingCard from "@/components/ui/PricingCard.astro";
 import ServiceCard from "@/components/ui/ServiceCard.astro";
+import Layout from "@/layouts/Layout.astro";
+import StatSection from "@/sections/general/StatSection.astro";
 import { Image } from "astro:assets";
 import { FaArrowRight } from "react-icons/fa";
 import {
@@ -14,8 +16,6 @@ import {
   HiOutlineLightBulb,
 } from "react-icons/hi2";
 import { IoLogoWebComponent } from "react-icons/io5";
-import Layout from "../../layouts/Layout.astro";
-import StatSection from "../sections/general/StatSection.astro";
 ---
 
 <Layout
