--- a/src/sections/general/ServiceSection.astro
+++ b/src/sections/general/ServiceSection.astro
@@ -1,10 +1,11 @@
 ---
-import ServiceCard from "../../../components/ui/ServiceCard.astro";
-import Subtitle from "../../../components/heading/Subtitle.astro";
-import * as IoIcons from "react-icons/io5";
-import * as HiIcons from "react-icons/hi2";
-const { HiOutlineCodeBracketSquare, HiOutlineBuildingStorefront } = HiIcons;
-const { IoLogoWebComponent } = IoIcons;
+import ServiceCard from "@/components/ui/ServiceCard.astro";
+import Subtitle from "@/components/heading/Subtitle.astro";
+import { IoLogoWebComponent } from "react-icons/io5";
+import {
+  HiOutlineCodeBracketSquare,
+  HiOutlineBuildingStorefront,
+} from "react-icons/hi2";
 ---
 
 <section class="p-4">
