--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,194 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import AboutSection from "../pages/sections/index/AboutSection.astro";
-import FeatureSection from "../pages/sections/index/FeatureSection.astro";
-import HeroSection from "../pages/sections/index/HeroSection.astro";
-import ProjectSection from "../pages/sections/index/ProjectSection.astro";
-import ServiceSection from "./sections/general/ServiceSection.astro";
-import TechnologySection from "../pages/sections/index/TechnologySection.astro";
-import StatSection from "./sections/general/StatSection.astro";
+import WaveSVG from "@/assets/background/wave.webp";
+import WebsiteIllustration from "@/assets/images/illustrations/pair_programming.svg";
+import ResponsiveIllustration from "@/assets/images/illustrations/responsive.svg";
+import ProjectOne from "@/assets/images/projects/project_1.webp";
+import ProjectTwo from "@/assets/images/projects/project_2.webp";
+import ProjectThree from "@/assets/images/projects/project_3.webp";
+import AstroImage from "@/assets/images/technologies/astro.svg";
+import CSSImage from "@/assets/images/technologies/css.svg";
+import HTMLImage from "@/assets/images/technologies/html.svg";
+import JavaScriptImage from "@/assets/images/technologies/javascript.svg";
+import RailsImage from "@/assets/images/technologies/rails.svg";
+import ReactImage from "@/assets/images/technologies/react.svg";
+import WordpressImage from "@/assets/images/technologies/wordpress.svg";
+import Subtitle from "@/components/heading/Subtitle.astro";
+import FeatureCard from "@/components/ui/FeatureCard.astro";
+import ProjectCard from "@/components/ui/ProjectCard.astro";
+import TechnologyCard from "@/components/ui/TechnologyCard.astro";
+import Layout from "@/layouts/Layout.astro";
+import ServiceSection from "@/sections/general/ServiceSection.astro";
+import StatSection from "@/sections/general/StatSection.astro";
+import { Image } from "astro:assets";
+import { FaArrowRight } from "react-icons/fa";
+import {
+  HiMiniBarsArrowUp,
+  HiMiniCubeTransparent,
+  HiOutlineCloud,
+  HiOutlineCodeBracketSquare,
+} from "react-icons/hi2";
 ---
 
 <Layout
   title="RysthDesign | Diseño y Desarrollo de Sitios Web Profesionales | Aplicaciones Web | Tíendas en Línea | Páginas Web Guayaquil"
 >
-  <HeroSection />
-  <FeatureSection />
-  <AboutSection />
+  <section class="h-full p-4 lg:h-max">
+    <Image
+      src={WaveSVG}
+      alt="Wave Background"
+      class="absolute top-0 left-0 w-full md:w-4/5 animate__animated animate__fadeInLeft"
+    />
+    <article
+      class="relative z-20 max-w-screen-xl gap-20 py-12 mx-auto space-y-10 pt-28 h-max lg:py-32 md:pt-48 lg:pt-56 md:py-24 lg:grid lg:grid-cols-2"
+    >
+      <Image
+        src={ResponsiveIllustration}
+        alt="Responsive web application"
+        class="w-full lg:h-full animate__animated animate__zoomIn animate__delay-1s"
+      />
+      <main
+        class="justify-center space-y-4 text-center lg:text-left lg:flex lg:flex-col animate__animated animate__delay-1s animate__fadeIn"
+      >
+        <h2
+          class="text-2xl font-bold md:text-3xl lg:text-5xl lg:max-w-2xl lg:!leading-[3.5rem]"
+        >
+          Desarrollo de Aplicaciones Web y Tiendas en Línea Profesionales
+        </h2>
+        <p
+          class="max-w-lg mx-auto text-sm leading-6 text-gray-500 md:text-base lg:ml-0"
+        >
+          Servicios de diseño y desarrollo web para negocios con soluciones
+          tecnológicas modernas, escalables y seguras.
+        </p>
+        <div class="mt-10">
+          <a
+            href="http://tinyurl.com/contact-ws"
+            target="_blank"
+            class="text-xs text-white border-transparent btn lg:text-sm btn-neutral bg-brand-blue group"
+          >
+            Contactar
+            <FaArrowRight
+              className="block text-xl group-hover:translate-x-1 transition"
+            />
+          </a>
+        </div>
+      </main>
+    </article>
+  </section>
+  <section class="p-4">
+    <article class="max-w-screen-xl py-12 mx-auto md:py-24 lg:py-36">
+      <Subtitle
+        title="Nuestras Características"
+        description="Explora nuestras competencias clave en diseño y desarrollo web."
+      />
+      <section class="grid gap-4 mt-12 sm:grid-cols-2 md:gap-8 md:grid-cols-4">
+        <FeatureCard
+          title="Diseño Responsivo"
+          description="Adaptabilidad y eficiencia en diferentes dispositivos."
+          IconComponent={HiOutlineCodeBracketSquare}
+          bgColor="violet-500"
+        />
+        <FeatureCard
+          title="Integración de Seguridad"
+          description="Seguridad robusta para protección de datos."
+          IconComponent={HiOutlineCloud}
+          bgColor="green-500"
+        />
+        <FeatureCard
+          title="Infraestructura Escalable"
+          description="Soluciones que crecen con tus necesidades."
+          IconComponent={HiMiniCubeTransparent}
+          bgColor="indigo-500"
+        />
+        <FeatureCard
+          title="Desempeño Óptimo"
+          description="Alta eficiencia y velocidad en cada proyecto."
+          IconComponent={HiMiniBarsArrowUp}
+          bgColor="blue-500"
+        />
+      </section>
+    </article>
+  </section>
+  <section class="p-4">
+    <article
+      class="grid max-w-screen-xl gap-20 py-12 mx-auto md:grid-cols-2 md:pt-24"
+    >
+      <Image src={WebsiteIllustration} alt="" class="w-full lg:h-full" />
+      <main
+        class="relative z-20 flex flex-col items-center justify-center md:items-start gap-7 md:gap-10"
+      >
+        <h3 class="font-semibold text-brand-blue">Acerca de Nosotros</h3>
+        <div class="space-y-2 text-center md:space-y-4 md:text-left">
+          <h2 class="text-2xl font-bold md:text-4xl lg:!leading-10 lg:max-w-lg">
+            Profesionales Expertos en <span class="text-brand-blue"
+              >Diseño y Desarrollo Web Personalizados</span
+            >
+          </h2>
+          <p
+            class="max-w-lg mx-auto text-sm !leading-7 text-gray-500 md:text-base lg:ml-0"
+          >
+            Con nuestra agencia 100% dígital ofrecemos plataformas seguras,
+            funcionales y personalizadas, asegurando que cada proyecto no solo
+            complemente, sino que también potencie las capacidades de tu
+            negocio.
+          </p>
+        </div>
+        <a
+          href="/servicios"
+          class="text-white border-transparent btn btn-neutral bg-brand-blue max-w-max group"
+        >
+          Descubre más <FaArrowRight
+            className="block text-xl group-hover:translate-x-1 transition"
+          />
+        </a>
+      </main>
+    </article>
+  </section>
   <ServiceSection />
-  <ProjectSection />
+  <section class="p-4 bg-gradient-to-br bg-brand-gradient">
+    <article class="relative max-w-screen-xl py-12 mx-auto md:py-24 md:pb-52">
+      <Subtitle
+        title="Galería de Proyectos"
+        description="Realizamos proyectos de alta calidad y gran alcance, para asegurar el éxito de tu negocio."
+        textColor="text-white"
+        descriptionColor="!text-white/75"
+      />
+      <main
+        class="left-0 right-0 grid w-full gap-4 my-12 lg:my-24 md:gap-8 lg:absolute md:-bottom-64 sm:grid-cols-2 lg:grid-cols-4"
+      >
+        <ProjectCard
+          imageUrl={ProjectOne}
+          projectUrl="https://updateec.netlify.app/"
+          altText="Project Image 1"
+        />
+        <ProjectCard
+          imageUrl={ProjectTwo}
+          projectUrl="https://jprefrigeracion.netlify.app/"
+          altText="Project Image 2"
+        />
+        <ProjectCard
+          imageUrl={ProjectThree}
+          projectUrl="https://react-tramitesec-uxbm.onrender.com/"
+          altText="Project Image 3"
+        />
+      </main>
+    </article>
+  </section>
+
   <hr class="hidden border-none md:block md:mt-56 bg-none" />
-  <TechnologySection />
+  <section class="p-2">
+    <article class="max-w-screen-xl py-12 mx-auto md:pb-24">
+      <main class="flex flex-wrap justify-center gap-4 md:gap-8">
+        <TechnologyCard src={HTMLImage} alt="HTML Logo" />
+        <TechnologyCard src={CSSImage} alt="CSS Logo" />
+        <TechnologyCard src={JavaScriptImage} alt="JavaScript Logo" />
+        <TechnologyCard src={AstroImage} alt="Astro Logo" />
+        <TechnologyCard src={ReactImage} alt="React Logo" />
+        <TechnologyCard src={RailsImage} alt="Rails Logo" />
+        <TechnologyCard src={WordpressImage} alt="WordPress Logo" />
+      </main>
+    </article>
+  </section>
+
   <StatSection />
 </Layout>
