Created contacots page again.

--- a/src/pages/contactos/index.astro
+++ b/src/pages/contactos/index.astro
@@ -1,6 +1,6 @@
 ---
 import { FaEnvelope, FaPhone } from "react-icons/fa6";
-import Layout from "../layouts/Layout.astro";
+import Layout from "@/layouts/Layout.astro";
 import { FaFacebook, FaInstagram, FaWhatsapp } from "react-icons/fa";
 ---
 
