Update StatSection and KraftStore proyect.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import ResponsiveIllustration from "@/assets/images/illustrations/responsive.svg
 import ProjectOne from "@/assets/images/projects/project_1.webp";
 import ProjectTwo from "@/assets/images/projects/project_2.webp";
 import ProjectThree from "@/assets/images/projects/project_3.webp";
+import ProjectFour from "@/assets/images/projects/project_4.webp";
 import AstroImage from "@/assets/images/technologies/astro.svg";
 import CSSImage from "@/assets/images/technologies/css.svg";
 import HTMLImage from "@/assets/images/technologies/html.svg";
@@ -159,17 +160,22 @@ import {
         <ProjectCard
           imageUrl={ProjectOne}
           projectUrl="https://updateec.netlify.app/"
-          altText="Project Image 1"
+          altText="UpdateEC Proyecto"
         />
         <ProjectCard
           imageUrl={ProjectTwo}
           projectUrl="https://jprefrigeracion.netlify.app/"
-          altText="Project Image 2"
+          altText="JPRefrigeracion Proyecto"
         />
         <ProjectCard
           imageUrl={ProjectThree}
           projectUrl="https://react-tramitesec-uxbm.onrender.com/"
-          altText="Project Image 3"
+          altText="TrámitesEC Proyecto"
+        />
+        <ProjectCard
+          imageUrl={ProjectFour}
+          projectUrl="https://kraftstore-ec.com/"
+          altText="KraftStore Proyecto WordPress E-Commerce"
         />
       </main>
     </article>
