--- a/src/pages/servicios/index.astro
+++ b/src/pages/servicios/index.astro
@@ -187,7 +187,7 @@ import { IoLogoWebComponent } from "react-icons/io5";
             "Aplicación Web Moderna",
             "Base de Datos Segura",
             "Interfaz Personalizada",
-            "Correo Profesional",
+            "Respaldo de Información",
             "Diseño Web Profesional",
             "Certificación SSL",
             "Dominio Gratuito",
