--- a/src/components/navigation/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar.astro
@@ -1,5 +1,5 @@
 ---
-import BrandImage from "../../assets/images/brand/brand.svg";
+import BrandImage from "../../assets/images/brand/brand_dark.svg";
 import { Image } from "astro:assets";
 import {
   FaWhatsapp,
@@ -12,7 +12,7 @@ import { HiBars3BottomLeft } from "react-icons/hi2";
 ---
 
 <nav
-  class="fixed top-0 z-50 w-full px-4 transition duration-300 md:py-3 bg-brand-blue animate__animated animate__bounceInDown"
+  class="fixed top-0 z-50 w-full px-4 py-6 transition duration-300 bg-white"
   id="navbar"
 >
   <div class="relative max-w-screen-xl p-0 mx-auto navbar">
@@ -20,7 +20,7 @@ import { HiBars3BottomLeft } from "react-icons/hi2";
       <div class="">
         <button
           type="button"
-          class="text-white btn btn-ghost lg:hidden ps-0 pe-2"
+          class="btn btn-ghost lg:hidden ps-0 pe-2"
           aria-label="Toggle button menu"
           id="toggleButton"
         >
@@ -43,6 +43,12 @@ import { HiBars3BottomLeft } from "react-icons/hi2";
             >
           </li>
           <li>
+            <a class="flex items-center gap-2 text-sm" href="/servicios">
+              <FaPencilAlt className="text-lg text-brand-blue" />
+              Precios</a
+            >
+          </li>
+          <li>
             <a class="flex items-center gap-2 text-sm" href=" contactos">
               <FaPhoneAlt className="text-lg text-brand-blue" />
 
@@ -52,14 +58,17 @@ import { HiBars3BottomLeft } from "react-icons/hi2";
         </ul>
       </div>
       <a class="text-xl" href="/">
-        <Image src={BrandImage} alt="RysthDesign Logo" class="w-20 lg:w-28" />
+        <Image src={BrandImage} alt="RysthDesign Logo" class="w-20 lg:w-32" />
       </a>
     </div>
-    <div class="hidden text-white navbar-center lg:flex">
+    <div class="hidden navbar-center lg:flex">
       <ul class="gap-2 px-1 menu menu-horizontal">
         <li><a href="/">Inicio</a></li>
         <li>
           <a href="/servicios">Servicios</a>
+        </li>
+        <li>
+          <a href="/servicios">Precios</a>
         </li>
         <li><a href="/contactos">Contactos</a></li>
       </ul>
@@ -68,7 +77,7 @@ import { HiBars3BottomLeft } from "react-icons/hi2";
       <a
         href="http://tinyurl.com/contact-ws"
         target="_blank"
-        class="text-xs text-white bg-green-500 border-transparent btn lg:text-sm btn-neutral"
+        class="text-xs text-white bg-green-500 border-transparent rounded-full shadow-xl btn lg:text-sm btn-neutral hover:bg-green-500 hover:border-transparent shadow-green-500/25 hover:-translate-y-2"
       >
         <FaWhatsapp className="block text-2xl" />
         Contactar
@@ -78,25 +87,6 @@ import { HiBars3BottomLeft } from "react-icons/hi2";
 </nav>
 
 <script>
-  const navBarElement = document.querySelector("#navbar");
-
-  function handleScroll() {
-    const scrollTop = window.scrollY;
-    if (scrollTop >= 100) {
-      navBarElement.classList.add("bg-brand-blue", "shadow-md");
-      navBarElement.classList.remove("bg-transparent");
-    } else {
-      navBarElement.classList.remove("bg-brand-blue", "shadow-md");
-      navBarElement.classList.add("bg-transparent");
-    }
-  }
-
-  // Inicializa el estado del navbar al cargar
-  handleScroll();
-
-  window.addEventListener("scroll", handleScroll);
-  window.addEventListener("resize", handleScroll); // Asegúrate de que el estilo se actualice al redimensionar
-
   const toggleButton = document.querySelector("#toggleButton");
   const mobileMenu = document.querySelector("#mobileMenu");
 
