--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,46 +32,51 @@ import {
   title="RysthDesign | Diseño y Desarrollo de Sitios Web Profesionales | Aplicaciones Web | Tíendas en Línea | Páginas Web Guayaquil"
 >
   <section class="h-full p-4 lg:h-max">
-    <Image
-      src={WaveSVG}
-      alt="Wave Background"
-      class="absolute top-0 left-0 w-full md:w-4/5 animate__animated animate__fadeInLeft"
-    />
     <article
-      class="relative z-20 max-w-screen-xl gap-20 py-12 mx-auto space-y-10 pt-28 h-max lg:py-32 md:pt-48 lg:pt-56 md:py-24 lg:grid lg:grid-cols-2"
+      class="max-w-screen-xl py-12 mx-auto space-y-36 pt-28 h-max lg:py-32 md:pt-48 lg:pt-56 md:py-24"
     >
-      <Image
-        src={ResponsiveIllustration}
-        alt="Responsive web application"
-        class="w-full lg:h-full animate__animated animate__zoomIn animate__delay-1s"
-      />
-      <main
-        class="justify-center space-y-4 text-center lg:text-left lg:flex lg:flex-col animate__animated animate__delay-1s animate__fadeIn"
-      >
+      <main class="flex flex-col items-center justify-center gap-6 text-center">
+        <p class="text-sm font-semibold uppercase text-brand-blue md:text-base">
+          Agencia Web
+        </p>
         <h2
           class="text-2xl font-bold md:text-3xl lg:text-5xl lg:max-w-2xl lg:!leading-[3.5rem]"
         >
           Desarrollo de Aplicaciones Web y Tiendas en Línea Profesionales
         </h2>
         <p
-          class="max-w-lg mx-auto text-sm leading-6 text-gray-500 md:text-base lg:ml-0"
+          class="max-w-lg mx-auto text-sm leading-6 text-gray-500 md:text-base"
         >
-          Servicios de diseño y desarrollo web para negocios con soluciones
+          Diseño y desarrollo web para pequeños negocios con soluciones
           tecnológicas modernas, escalables y seguras.
         </p>
-        <div class="mt-10">
+        <div class="flex items-center gap-4 mt-4">
           <a
             href="http://tinyurl.com/contact-ws"
             target="_blank"
-            class="text-xs text-white border-transparent btn lg:text-sm btn-neutral bg-brand-blue group"
+            class="text-xs text-white border-transparent rounded-full shadow-xl btn lg:text-sm btn-neutral bg-brand-blue group shadow-indigo-900/25 btn-lg"
           >
             Contactar
             <FaArrowRight
               className="block text-xl group-hover:translate-x-1 transition"
             />
           </a>
+          <a
+            href="/servicios"
+            class="text-xs border-transparent rounded-full shadow-xl btn lg:text-sm btn-ghost group shadow-neutral-400/25 btn-lg"
+          >
+            Servicios
+            <FaArrowRight
+              className="block text-xl group-hover:translate-x-1 transition"
+            />
+          </a>
         </div>
       </main>
+      <Image
+        src={ResponsiveIllustration}
+        alt="Responsive web application"
+        class="w-full drop-shadow-2xl shadow-indigo-600 lg:h-full"
+      />
     </article>
   </section>
   <section class="p-4">
