--- a/src/pages/contactos/index.astro
+++ b/src/pages/contactos/index.astro
@@ -9,7 +9,7 @@ import { FaFacebook, FaInstagram, FaWhatsapp } from "react-icons/fa";
 >
   <!-- BreadCrumbSection -->
   <header
-    class="py-12 pt-24 text-center text-white bg-gradient-to-t bg-brand-gradient md:pb-24 md:pt-36"
+    class="py-12 text-center text-white pt-44 bg-gradient-to-t bg-brand-gradient md:pb-24 md:pt-56"
   >
     <h2 class="text-3xl font-bold">Contactos</h2>
     <div class="flex justify-center text-sm breadcrumbs">
