--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,7 +75,7 @@ import {
       <Image
         src={ResponsiveIllustration}
         alt="Responsive web application"
-        class="w-full drop-shadow-2xl shadow-indigo-600 lg:h-full"
+        class="w-full drop-shadow-2xl lg:h-full md:w-3/4 md:mx-auto"
       />
     </article>
   </section>
