--- a/src/pages/servicios/index.astro
+++ b/src/pages/servicios/index.astro
@@ -1,8 +1,5 @@
 ---
-import WavePNG from "@/assets/background/lower_wave.webp";
 import WebsiteIllustration from "@/assets/images/illustrations/website.svg";
-import Subtitle from "@/components/heading/Subtitle.astro";
-import PricingCard from "@/components/ui/PricingCard.astro";
 import ServiceCard from "@/components/ui/ServiceCard.astro";
 import Layout from "@/layouts/Layout.astro";
 import StatSection from "@/sections/general/StatSection.astro";
@@ -23,7 +20,7 @@ import { IoLogoWebComponent } from "react-icons/io5";
 >
   <!-- BreadCrumbSection -->
   <header
-    class="py-12 pt-24 text-center text-white bg-gradient-to-t bg-brand-gradient md:pb-24 md:pt-36"
+    class="py-12 text-center text-white pt-44 bg-gradient-to-t bg-brand-gradient md:pb-24 md:pt-56"
   >
     <h2 class="text-3xl font-bold">Nuestros Servicios</h2>
     <div class="flex justify-center text-sm breadcrumbs">
@@ -125,80 +122,4 @@ import { IoLogoWebComponent } from "react-icons/io5";
   </section>
   <!-- StatSection -->
   <StatSection />
-
-  <!-- PricingSection -->
-  <section class="relative p-4">
-    <Image
-      src={WavePNG}
-      alt="Wave Background"
-      class="absolute bottom-0 left-0 right-0 w-full max-h-96 brightness-75"
-    />
-    <div class="max-w-screen-xl py-12 mx-auto space-y-12 md:py-14">
-      <Subtitle
-        title="Consulta Nuestros Planes"
-        description="Ofrecemos soluciones a medida para tu presencia digital, con opciones desde tiendas en línea hasta aplicaciones web avanzadas."
-      />
-      <div
-        class="relative flex flex-col items-center justify-center space-x-4 space-y-12 md:flex-row lg:space-y-0"
-      >
-        {/* Plan Informativo */}
-        <PricingCard
-          title="Plan MiniStore"
-          price="$300"
-          features={[
-            "Gestor de Contenido",
-            "Mini Tienda en Línea",
-            "Pedidos por WhatsApp",
-            "Hasta 25 Productos",
-            "Diseño Web Profesional",
-            "Certificación SSL",
-            "Dominio Gratuito",
-            "Hosting Gratuito",
-            "Optimizado para Móviles",
-          ]}
-          maintanceText="Mantenimiento y Optimización $20/mes"
-          buttonText="Comenzar Ahora"
-          highlight={false}
-        />
-        {/* Plan E-Commerce */}
-        <PricingCard
-          title="Plan E-Commerce"
-          price="$600"
-          features={[
-            "Gestor de Contenido",
-            "Tienda en Línea",
-            "Pedidos por WhatsApp",
-            "Hasta 100 Productos",
-            "Diseño Web Profesional",
-            "Certificación SSL",
-            "Dominio Gratuito",
-            "Hosting Gratuito",
-            "Optimizado para Móviles",
-          ]}
-          buttonText="Comenzar Ahora"
-          maintanceText="Mantenimiento y Optimización $35/mes"
-          highlight={true}
-        />
-        {/* Plan Aplicación Web */}
-        <PricingCard
-          title="Plan Aplicación Web"
-          price="$900"
-          features={[
-            "Aplicación Web Moderna",
-            "Base de Datos Segura",
-            "Interfaz Personalizada",
-            "Respaldo de Información",
-            "Diseño Web Profesional",
-            "Certificación SSL",
-            "Dominio Gratuito",
-            "Hosting Gratuito",
-            "Optimizado para Móviles",
-          ]}
-          buttonText="Comenzar Ahora"
-          maintanceText="Mantenimiento y Optimización $80/mes"
-          highlight={false}
-        />
-      </div>
-    </div>
-  </section>
 </Layout>
