--- a/src/components/navigation/FooterBar.astro
+++ b/src/components/navigation/FooterBar.astro
@@ -4,7 +4,7 @@ import { FaInstagram, FaFacebook, FaWhatsapp, FaGoogle } from "react-icons/fa6";
 import BrandImage from "../../assets/images/brand/brand_dark.svg";
 ---
 
-<footer class="p-4 bg-neutral-50">
+<footer class="p-4">
   <div class="max-w-xl py-12 mx-auto pb:0">
     <header class="flex flex-col items-center justify-center">
       <a
